# voicecore-ai

./: .env.example  .env.v2.example  .gitignore  ARCHITECTURE_V2.md  CALL_TESTING_SUMMARY.md  CHECKPOINT_10_CORE_FUNCTIONALITY.md  CHECKPOINT_5_VERIFICATION.md  COMO_VER_RAILWAY_DASHBOARD.md  CONTINUAR.bat  DEPLOYMENT.md  DEPLOY_MANUAL_SIMPLE.md  DEPLOY_NOW.md  DEPLOY_RENDER_NOW.md  Dockerfile  ENTERPRISE_DASHBOARD_GUIDE.md  FINAL_VALIDATION_REPORT.md  GETTING_STARTED_V2.md  INSTRUCCIONES_DESPLIEGUE.md  INSTRUCCIONES_FINALES.md  ISTIO_IMPLEMENTATION_SUMMARY.md  KAFKA_DEPLOYMENT_SUMMARY.md  NEXT_STEPS.md  PASOS_FINALES.md  PLAN_ACCION_RAILWAY.md  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_READY.md  Procfile  QUICK_DEPLOY.txt  QUICK_TEST_START.md  RAILWAY_DEPLOY_GUIDE.md  RAILWAY_TROUBLESHOOTING.md  README.md  README_DEPLOYMENT.md  README_V2.md  RESUMEN_FINAL.md  SETUP_GUIDE.md  START_LOCAL.md  TECH_STARTUP_DASHBOARD_GUIDE.md  TESTING_GUIDE.md  UPDATE_TO_3.0.md  (+67 more)
alembic/: env.py
database/: init.sql
docs/: EVENT_SOURCING.md  ISTIO_SERVICE_MESH.md  VAULT_SECRETS_MANAGEMENT.md  VIP_MANAGEMENT.md
examples/: event_sourcing_example.py  interactive_call_demo.py  vip_management_example.py
frontend/: .eslintrc.json  Dockerfile  README.md  package.json  tsconfig.json
gateway/: Dockerfile  main.py  requirements.txt
kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pvc.yaml  secrets.yaml  service.yaml
monitoring/: alert_rules.yml  prometheus.yml
nginx/: nginx.prod.conf
scripts/: deploy-istio.ps1  deploy-istio.sh  deploy-kafka.ps1  deploy-kafka.sh  deploy-vault.ps1  deploy-vault.sh  deploy.sh  init_project.py  setup-production.ps1  (+3 more)
(+206 files in other folders)
